--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
                          alt="Icone Lixeira" />
                 </button>
             </div>
+
+            <div class="done">
+                <button title="Concluir Tarefa"></button>
+                <p>Lorem ipsum dolor, sit amet consectetur 
+                   adipisicing elit.</p>
+                <button title="Excluir Tarefa">
+                    <img src="./assets/img/lixeira.png" 
+                         alt="Icone Lixeira" />
+                </button>
+            </div>
          </section>
     </main>
 </body>
