Ajuste imagens e CSS

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         <section>
             <form id="formCadastroTarefa">
                 <input type="text" 
+                       name="tarefa"
                        required minlength="2"  
                        placeholder="Adicione uma nova tarefa" />
                 
                 <button type="submit">
                     Criar 
-                    <img src="./assets/img/adicionar.png" 
+                    <img src="./assets/img/adicionar.svg" 
                          alt="Icone de Criar Tarefa" />
                 </button>
             </form>
@@ -77,5 +78,7 @@
             </div>
          </section>
     </main>
+
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
