--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                        placeholder="Adicione uma nova tarefa" />
                 
                 <button type="submit">
-                    Criar 
+                    <span>Criar</span> 
                     <img src="./assets/img/adicionar.svg" 
                          alt="Icone de Criar Tarefa" />
                 </button>
